--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_screenutil: ^5.8.4
   octo_image: ^1.0.2
   image_picker: ^1.0.1
+  qr_code_scanner: ^1.0.1
 
 dev_dependencies:
   flutter_test:
