--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   octo_image: ^1.0.2
   image_picker: ^1.0.1
   qr_code_scanner: ^1.0.1
+  flutter_slidable: ^3.0.0
 
 dev_dependencies:
   flutter_test:
