--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   image_picker: ^1.0.1
   qr_code_scanner: ^1.0.1
   flutter_slidable: ^3.0.0
+  fluttertoast: ^8.2.2
 
 dev_dependencies:
   flutter_test:
