--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   firebase_core: ^2.18.0
   firebase_crashlytics: ^3.4.0
   connectivity: ^3.0.6
+  easy_debounce: ^2.0.3
 
 dev_dependencies:
   flutter_test:
